objects/CICD_JiraSyncConfiguration__mdt.object
<CustomObject>
    <fields>
        <fullName>CICD_IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CICD_JiraIssueFieldName__c</fullName>
        <label>Jira Issue Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CICD_MappingNotes__c</fullName>
        <label>Mapping Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CICD_ParentObject__c</fullName>
        <label>Parent Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CICD_SfFieldApiName__c</fullName>
        <inlineHelpText>In Case of  Relationship field, populate with External Id field of the Parent object</inlineHelpText>
        <label>SF Field API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CICD_SfObjectApiName__c</fullName>
        <label>SF Object API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CICD_SyncFromJira__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync From Jira</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CICD_SyncToJira__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync To Jira</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CICD_SyncVariationKey__c</fullName>
        <inlineHelpText>If an sobject type has variations in sync mapping, populate this field with the variation value</inlineHelpText>
        <label>Sync Variation Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Jira Sync Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>CICD_SfObjectApiName__c</columns>
        <columns>CICD_SyncVariationKey__c</columns>
        <columns>CICD_ParentObject__c</columns>
        <columns>CICD_SfFieldApiName__c</columns>
        <columns>CICD_JiraIssueFieldName__c</columns>
        <columns>CICD_SyncFromJira__c</columns>
        <columns>CICD_SyncToJira__c</columns>
        <columns>CICD_IsActive__c</columns>
        <columns>CICD_MappingNotes__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Jira Sync Configuration</pluralLabel>
</CustomObject>